--- a/core/templates/core/product_detail.html
+++ b/core/templates/core/product_detail.html
@@ -1,38 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ product.name }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+{% extends 'core/base.html' %}
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="{{ product.image.url }}" class="img-fluid">
-        </div>
+{% block title %}{{ product.name }}{% endblock %}
 
-        <div class="col-md-6">
-            <h2>{{ product.name }}</h2>
+{% block content %}
+<div class="row">
+    <div class="col-md-6">
+        <img src="{{ product.image.url }}" class="img-fluid">
+    </div>
 
-            {% if product.old_price %}
-                <p>
-                    <span class="text-muted text-decoration-line-through">
-                        {{ product.old_price }} VNĐ
-                    </span>
-                </p>
-            {% endif %}
+    <div class="col-md-6">
+        <h2>{{ product.name }}</h2>
 
-            <h3 class="text-danger">{{ product.price }} VNĐ</h3>
+        {% if product.old_price %}
+        <p class="text-muted text-decoration-line-through">
+            {{ product.old_price }} VNĐ
+        </p>
+        {% endif %}
 
-            <p class="mt-4">{{ product.description }}</p>
+        <h3 class="text-danger">{{ product.price }} VNĐ</h3>
 
-            <button class="btn btn-danger mt-3">
-                Thêm vào giỏ hàng
-            </button>
-        </div>
+        <p class="mt-4">{{ product.description }}</p>
+
+        <a href="{% url 'cart_add' product.id %}" class="btn btn-primary">
+            Thêm vào giỏ hàng
+        </a>
     </div>
 </div>
-
-</body>
-</html>
+{% endblock %}
